--- a/styles/main.css
+++ b/styles/main.css
@@ -3,510 +3,408 @@
     padding: 0;
     font-family: Calibri;
     color: #fff;
-    
-}
-html {
-    /* background-color: #555; */
-    background: radial-gradient(50% 50% at 50% 50%, rgba(14, 0, 43, 0.2) 0%, rgba(44, 0, 136, 0.2) 100%), linear-gradient(0deg, rgba(31, 0, 154, 0.2), rgba(31, 0, 154, 0.2)), #000000;
 }
 
-html, body {
+html { 
+    background: #CD4343;
+    box-shadow: inset 0px 0px 102px 27px rgba(55, 17, 17, 0.75);
     overflow: hidden;
+}
+
+@font-face {
+    font-family: Inter;
+    src: url('../production/fonts/Inter/Inter-VariableFont_slnt\,wght.ttf');
 }
 
 :root {
 
 }
 
-@font-face {
-    font-family: Inter;
-    src: url('../production/fonts/inter/Inter-VariableFont.ttf');
-}
-
 .container {
     width: 100%;
     min-height: 100vh;
-    display: flex;
-    /* justify-content: center; */
-    align-items: center;
-    flex-direction: column;
 }
 
 .title {
     display: flex;
     width: 100%;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    height: 15vh;
+    z-index: 100;
 }
 
-.title > * {
+.title * {
+    font-size: 6.5rem;
     font-family: Inter;
+    color: #122E40;
+    text-shadow: 0 0 3px #245C80,
+        0 0 3px #245C80,
+        0 0 3px #245C80,
+        0 0 3px #245C80,
+        0 0 3px #245C80,
+        0 0 3px #245C80,
+        0 0 3px #245C80,
+        0 0 4px #245C80,
+        0 0 4px #245C80,
+        0 0 4px #245C80,
+        0 0 4px #245C80,
+        0 0 4px #245C80,
+        0 0 4px #245C80,
+        -12px -6px 17px rgba(0, 0, 0, 0.4);
     font-weight: 900;
-    font-size: 4rem;
-    min-width: 1rem;
-    position: relative;
-    --timeDif: 0.2s;
-    --slideEnd: 0;
-
-    translate: 0 -100%;
+    margin: 1rem;
+    --animationStart: -150%;
+    translate: 0 var(--animationStart);
 }
 
-@keyframes titleLetterSlideDown {
+.title-1 {
+    animation: title-slide-in 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 0s 1 forwards;
+}
+
+.title-2 {
+    animation: title-slide-in 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 0.5s 1 forwards;
+}
+
+.title-3 {
+    animation: title-slide-in 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 1s 1 forwards;
+}
+
+@keyframes title-slide-in {
     0% {
-        translate: 0 -100%;
+        translate: -35% var(--animationStart);
     }
     100% {
-        translate: 0 var(--slideEnd);
+        translate: 0 0;
     }
 }
 
-.title > *:nth-child(1) {
-    animation: titleLetterSlideDown ease-out 1s calc(var(--timeDif) * 0) forwards;
-}
-
-.title > *:nth-child(2) {
-    animation: titleLetterSlideDown ease-out 1s calc(var(--timeDif) * 1) forwards;
-}
-
-.title > *:nth-child(3) {
-    animation: titleLetterSlideDown ease-out 1s calc(var(--timeDif) * 2) forwards;
-}
-
-.title > *:nth-child(4) {
-    animation: titleLetterSlideDown ease-out 1s calc(var(--timeDif) * 3) forwards;
-}
-
-.title > *:nth-child(5) {
-    animation: titleLetterSlideDown ease-out 1s calc(var(--timeDif) * 4) forwards;
-}
-
-.title > *:nth-child(6) {
-    animation: titleLetterSlideDown ease-out 1s calc(var(--timeDif) * 5) forwards;
-}
-
-.title > *:nth-child(7) {
-    animation: titleLetterSlideDown ease-out 1s calc(var(--timeDif) * 6) forwards;
-}
-
-.title > *:nth-child(8) {
-    animation: titleLetterSlideDown ease-out 1s calc(var(--timeDif) * 7) forwards;
-}
-
-.title > *:nth-child(9) {
-    animation: titleLetterSlideDown ease-out 1s calc(var(--timeDif) * 8) forwards;
-}
-
-.title > *:nth-child(10) {
-    animation: titleLetterSlideDown ease-out 1s calc(var(--timeDif) * 9) forwards;
-}
-
-.title > *:nth-child(11) {
-    animation: titleLetterSlideDown ease-out 1s calc(var(--timeDif) * 10) forwards;
-}
-
-.title > *:nth-child(12) {
-    animation: titleLetterSlideDown ease-out 1s calc(var(--timeDif) * 11) forwards;
-}
-
-.ballWrapper {
+.itemsWrapper {
+    display: flex;
+    align-items: center;
+    height: 60vh;
     width: 100%;
-    height: 75vh;
+    position: relative;
+}
+
+.item {
+    width: 25%;
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 70vh;
-    position: relative;
-}
-
-.ballContainer {
-    height: 100%;
-    display: flex;
-    align-items: center;
-    position: relative;
-    animation:  ballRoll 3s ease-out;
-}
-
-.ball {
-    position: relative;
-    aspect-ratio: 1;
-    height: 75%;
-    border-radius: 1000px;
-    cursor: pointer;
-    background-color: #000;
-}
-
-.shakeMe {
-    /* background-color: red; */
+    height: 65%;
+    filter: drop-shadow(0 0 5px #0007);
+    transition: all 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
     position: absolute;
-    left: 50%;
-    top: 50%;
     translate: -50% -50%;
-    aspect-ratio: 1;
-    z-index: 10000;  
-    animation: shakeLabelSpin 30s linear infinite;  
+    left: var(--left);
+    top: 50%;
+    z-index: 50;
 }
 
-@keyframes shakeLabelSpin {
+.item.default {
+    opacity: 0;
+}
+
+.item:nth-child(1) {
+    --left: 25%;
+    animation: itemSlideIn 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 0s 1,
+    appearInstantly 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 0s 1 forwards;
+}
+
+.item:nth-child(2) {
+    --left: 50%;
+    animation: itemSlideIn 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 0.5s 1,
+    appearInstantly 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 0.5s 1 forwards;
+}
+
+.item:nth-child(3) {
+    --left: 75%;
+    animation: itemSlideIn 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 1s 1,
+    appearInstantly 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 1s 1 forwards;
+}
+
+@keyframes appearInstantly {
     0% {
-        rotate: 180deg;
+        opacity: 0;
+    }
+    1% {
+        opacity: 1;
     }
     100% {
-        rotate: 540deg;
+        opacity: 1;
     }
 }
 
-.shakeMe > * {
-    /* 
-    font size is accounted for in the space between the letters
-    dif is for the difference in angle between each letter
-    offset is the distance from the center of the ball
-    */
-    --fontSize: 2;
-    --dif: 4deg;
-    --offset: 30vh;
-    
-    /* angle is the angle of each letter */
-    --angle: calc(var(--dif) * var(--fontSize) * var(--n));
-    rotate: calc(var(--angle) - 270deg);
-    position: absolute;
-    /* left and top are determined using trig functions, in a unit circle */
-    left: calc(cos(var(--angle)) * var(--offset));
-    top: calc(sin(var(--angle)) * var(--offset));
-    display: block;
-    font-family: Inter;
-    font-size: calc((var(--fontSize) * 1vw) + 1rem);
-    font-weight: 600;
-    opacity: 0.7;
-}
-
-.shakeMe > *:nth-child(1) {
-    --n: 1;
-}
-
-.shakeMe > *:nth-child(2) {
-    --n: 2;
-}
-
-.shakeMe > *:nth-child(3) {
-    --n: 3;
-}
-
-.shakeMe > *:nth-child(4) {
-    --n: 4;
-}
-
-.shakeMe > *:nth-child(5) {
-    --n: 5;
-}
-
-.shakeMe > *:nth-child(6) {
-    --n: 6;
-}
-
-.shakeMe > *:nth-child(7) {
-    --n: 7;
-}
-
-.shakeMe > *:nth-child(8) {
-    --n: 8;
-}
-
-.ball.shake {
-    animation: shake 0.4s linear infinite;
-}
-
-/* https://www.w3schools.com/howto/howto_css_shake_image.asp */
-@keyframes shake {
-    0% { transform: translate(1px, 1px) rotate(0deg); }
-    10% { transform: translate(-1px, -2px) rotate(-1deg); }
-    20% { transform: translate(-3px, 0px) rotate(1deg); }
-    30% { transform: translate(3px, 2px) rotate(0deg); }
-    40% { transform: translate(1px, -1px) rotate(1deg); }
-    50% { transform: translate(-1px, 2px) rotate(-1deg); }
-    60% { transform: translate(-3px, 1px) rotate(0deg); }
-    70% { transform: translate(3px, 1px) rotate(-1deg); }
-    80% { transform: translate(-1px, -1px) rotate(1deg); }
-    90% { transform: translate(1px, 2px) rotate(0deg); }
-    100% { transform: translate(1px, -2px) rotate(-1deg); }
-}
-
-.ball.onStart {
-    animation: ballSpin 3s linear;
-}
-
-.ball > *:not(.ballHighlight) {
-    user-select: none;
-    pointer-events: none;
-}
-
-.ballHighlight {
-    position: absolute;
-    border-radius: 100%;
-    left: 0%;
-    top: 0%;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(to top left, #000 50%, #fff4 150%);
-    animation: highlightNoSpin 3s linear;
-}
-
-@keyframes highlightNoSpin {
-    0% {
-        rotate: 0deg;
-    }
-    100% {
-        rotate: -720deg;
-    }
-}
-
-@keyframes ballRoll {
+@keyframes itemSlideIn {
     0% {
         left: -100%;
     }
     100% {
-        left: 0%;
+        left: var(--left);
     }
 }
 
-@keyframes ballSpin {
-    0% {
-        rotate: 0deg;
-    }
-    100% {
-        rotate: 720deg
-    }
+.item.chosen {
+    /* filter: drop-shadow(0 0 5px #000f) drop-shadow(-15px -15px 5px #0005); */
+    scale: 1.05;
+    translate: -50% calc(-50% + -16px);
 }
 
-.shadow {
-    aspect-ratio: 4 / 1;
-    position: absolute;
-    background-color: #0003;
-    width: 130%;
-    border-radius: 100%;
-    top: 70%;
-    left: 50%;
-    translate: -50%;
+.item.chosen:hover {
+    translate: -50% calc(-50% + -32px);
 }
 
-.white {
-    position: absolute;
-    background: #E7E7E7;
-    box-shadow: inset 0px 0px 10px 10px rgba(0, 0, 0, 0.25);
-    aspect-ratio: 1;
-    border-radius: 1000px;
-    width: 50%;
-    left: 50%;
-    top: 50%;
-    translate: -50% -50%;
+.item:hover {
+    translate: -50% calc(-50% + -16px);
 }
 
-.tringle {
-    /* display: none; */
-    opacity: 0;
-    
-    
-    background-color: #00155E;
-    width: calc(cos(30deg) * 90%);
-    aspect-ratio: 1.732 / 1.5;    
-    clip-path: polygon(0 100%, 50% 0%, 100% 100%);
-    position: absolute;
-    left: 50%;
-    top: 7%;
-    translate: -50%;
+.item img {
+    max-width: 100%;
+    max-height: 100%;
 }
 
-.tringleText {
-    /* display: none; */
+.shoot {
+    height: 25vh;
+    background-color: #122E40;
+    border-top: #245C80 6px solid;
     display: flex;
-    opacity: 0;
-    
-    -webkit-text-stroke: 2px #fff3;
-    /* background-color: #00b3; */
-    position: absolute;
-    left: 50%;
-    top: 55%;
-    translate: -50% -50%;
-    
-    width: calc(sin(45deg) * 75%);
-    aspect-ratio: 1;
-    font-size: 2.65vh;
-    text-align: center;
     justify-content: center;
     align-items: center;
-    color: #fff;
-    padding: 0%;
-    font-weight: 600;
+    position: relative;
+    z-index: 100;
+}
+
+.shootBtn {
+    background-color: transparent;
+    border: transparent;
+    outline: none;
+    font-size: 4rem;
+    font-weight: 800;
+    font-family: Inter;
+    color: #AFCDE0;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
+
+.scoreWrapper, .incrementWrapper {
+    position: absolute;
+    top: 0;
+    translate: 0 -100%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem;
+    font-size: 2.5rem;
+    font-weight: 900;
+    font-family: Inter;
     box-sizing: border-box;
 }
 
-.eight {
-    font-size: 20vh;
-    color: #000;
+.pointIncrement {
+    color: #43CC6A;
     font-family: Inter;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    translate: -50% -50%;
-    opacity: 1;
-    transition: opacity 1.5s cubic-bezier(0.075, 0.82, 0.165, 1);
-
+    font-weight: 900;
+    font-size: 1.5rem;
 }
 
-.ball.active .tringle {
-    /* display: unset; */
-    transition: opacity 2s cubic-bezier(0.075, 0.82, 0.165, 1);
-    opacity: 1;
+.incrementWrapper {
+    translate: 0 calc(-100% - 2.5rem);
 }
 
-.ball.active .tringleText {
-    /* display: flex; */
-    transition: opacity 2s cubic-bezier(0.075, 0.82, 0.165, 1);
-    opacity: 1;
-}
-
-.ball.active .eight {
-    /* display: none; */
+.incrementWrapper * {
+    /* opacity: 0; */
+    transition: 0 0;
     opacity: 0;
 }
 
-.ball.active {
-    animation: shakeBig 1s reverse 1;
+.incrementWrapper *.animating {
+    transition: all 2s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
-@keyframes shakeBig {
-    0% { transform: translate(10px, 10px) rotate(0deg); }
-    5% { transform: translate(10px, -10px) rotate(1deg); }
-    10% { transform: translate(-10px, -20px) rotate(-1deg); }
-    15% { transform: translate(-10px, -10px) rotate(1deg); }
-    20% { transform: translate(-30px, 00px) rotate(1deg); }
-    25% { transform: translate(-30px, 10px) rotate(0deg); }
-    30% { transform: translate(30px, 20px) rotate(0deg); }
-    35% { transform: translate(10px, 20px) rotate(0deg); }
-    40% { transform: translate(10px, -10px) rotate(1deg); }
-    45% { transform: translate(10px, -20px) rotate(-1deg); }
-    50% { transform: translate(-10px, 20px) rotate(-1deg); }
-    55% { transform: translate(-10px, -20px) rotate(-1deg); }
-    60% { transform: translate(-30px, 10px) rotate(0deg); }
-    65% { transform: translate(-30px, 00px) rotate(1deg); }
-    70% { transform: translate(30px, 10px) rotate(-1deg); }
-    75% { transform: translate(30px, 20px) rotate(0deg); }
-    80% { transform: translate(-10px, -10px) rotate(1deg); }
-    85% { transform: translate(10px, 10px) rotate(0deg); }
-    90% { transform: translate(10px, 20px) rotate(0deg); }
-    95% { transform: translate(-10px, -20px) rotate(-1deg); }
-    100% { transform: translate(10px, -20px) rotate(-1deg); }
+@keyframes fade-up {
+    0% {
+        translate: 0 0;
+        opacity: 1;
+    }
+    90% {
+        opacity: 0;
+    }
+    100% {
+        translate: 0 -100%;
+    }
 }
 
-.inputWrapper {
+.winScreen {
+    position: absolute;
+    left: 50%;
+    width: 40%;
+    height: 50vh;
+    translate: -50% 0;
+    background-color: #122E40;
+    border-top: 6px solid #245C80;
+    border-left: 6px solid #245C80;
+    border-right: 6px solid #245C80;
+    z-index: 90;
+    grid-template-rows: repeat(3, 1fr);
+    border-radius: 10px 10px 0 0;
+    display: grid;
+    bottom: -100%;
+    transition: bottom 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.winScreen.active {
+    bottom: 25vh;
+}
+
+.youWin {
+    font-size: 4rem;
+    font-family: Inter;
+    font-weight: 900;
     width: 100%;
-    height: 15vh;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+    text-align: center;
+}
+
+.score {
+    font-size: 3.5rem;
+    font-weight: 900;
+    font-family: Inter;
     display: flex;
     justify-content: center;
     align-items: center;
-    translate: 0 0%;
-    animation: inputSlideUp 3s ease-out;
 }
 
-@keyframes inputSlideUp {
-    0% {
-        translate: 0 100%;
-    }
-    100% {
-        translate: 0 0%;
-    }
+.winButtonWrapper {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
-.questionInput {
-    background-color: transparent;
-    border: 4px solid #352062;
-    border-radius: 8px;
-    font-size: 2rem;
-    padding: 4px 8px;
-    outline: none;
-    position: fixed;
-    bottom: 5vh;
-    width: 45%;
-}
-
-.questionInput::placeholder {
-    color: #fff;
-    opacity: 0.25;
-    font-weight: 500;
+.winButtonWrapper button {
+    aspect-ratio: 2 / 1;
+    width: 25%;
+    background-color: #19608C;
+    border: #245C80;
+    border-radius: 6px;
     font-family: Inter;
+    font-weight: 700;
+    font-size: 1.75rem;
+    cursor: pointer;
 }
 
-.questionInput:hover, .questionInput:active, .questionInput:focus {
+.winButtonWrapper button:hover {
     filter: brightness(1.1);
 }
 
-@media screen and (width <= 1280px) {
-    .ball {
-        --mult: 0.85; 
-        animation: var-shake 0.4s linear infinite;
-    }    
+.sweepScreen {
+    width: 100vw;
+    height: 100vh;
+    background-color: #CD4343;
+    position: absolute;
+    left: 100%;
+    top: 0;
+    transition: left 500ms ease-in;
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-family: Inter;
+    font-size: 8rem;
+    font-weight: 900;
+}
 
-    .ball.active {
-        animation: var-shake 0.4s linear infinite,
-        shakeBig 1s reverse 1;
+.sweepScreen.sweep {
+    left: 0%;
+}
+
+@media screen and (width <= 1300px) {   
+    .item.paper img {
+        max-height: 80%;
+    }
+}
+
+@media screen and (width <= 1100px) {
+    .title * {
+        font-size: 4.5rem;
     }
 
-    @keyframes var-shake {
-        0% { transform: translate(calc(1px * var(--mult)), calc(1px * var(--mult))) rotate(calc(0deg * var(--mult))); }
-        10% { transform: translate(calc(-1px * var(--mult)), calc(-2px * var(--mult))) rotate(calc(-1deg * var(--mult))); }
-        20% { transform: translate(calc(-3px * var(--mult)), calc(0px * var(--mult))) rotate(calc(1deg * var(--mult))); }
-        30% { transform: translate(calc(3px * var(--mult)), calc(2px * var(--mult))) rotate(calc(0deg * var(--mult))); }
-        40% { transform: translate(calc(1px * var(--mult)), calc(-1px * var(--mult))) rotate(calc(1deg * var(--mult))); }
-        50% { transform: translate(calc(-1px * var(--mult)), calc(2px * var(--mult))) rotate(calc(-1deg * var(--mult))); }
-        60% { transform: translate(calc(-3px * var(--mult)), calc(1px * var(--mult))) rotate(calc(0deg * var(--mult))); }
-        70% { transform: translate(calc(3px * var(--mult)), calc(1px * var(--mult))) rotate(calc(-1deg * var(--mult))); }
-        80% { transform: translate(calc(-1px * var(--mult)), calc(-1px * var(--mult))) rotate(calc(1deg * var(--mult))); }
-        90% { transform: translate(calc(1px * var(--mult)), calc(2px * var(--mult))) rotate(calc(0deg * var(--mult))); }
-        100% { transform: translate(calc(1px * var(--mult)), calc(-2px * var(--mult))) rotate(calc(-1deg * var(--mult))); }
+    .winButtonWrapper button {
+        width: 30%;
+        font-size: 1.5rem;
+    }    
+}
+
+@media screen and (width <= 800px) {
+    .title * {
+        font-size: 3.5rem;
+    }
+
+    .title * {
+        --animationStart: -200%;
+    }
+
+    .winButtonWrapper button {
+        font-size: 1.25rem;
+    }   
+
+    .item.paper img {
+        max-height: 70%;
     }
 }
 
 @media screen and (width <= 650px) {
-    .ball {
-        height: 70vw;
-    }
-
-    .shadow {
-        top: calc(60% + 7vw);
-        translate: -50%;
-    }    
-
-    .eight {
-        font-size: 20vw;
-    }
-
-    .shakeMe > * {
-        --fontSize: 2.5;
-        --offset: 40vw;
-        --dif: 3.25deg;
+    .title * {
+        font-size: 3rem;
     }
 
     .title * {
-        font-size: 15vw;
-        --slideEnd: 50%;
+        --animationStart: -200%;
     }
 
-    .questionInput {
-        font-size: 1.5rem;
-        width: 75%;
-        padding: 2%;
+    .winButtonWrapper button {
+        font-size: 1rem;
     }
 
-    .ball {
-        --mult: 0.75;
-    }
-
-    .tringleText {
-        font-size: 3.3vw;
+    
+    .item.paper img {
+        max-height: 60%;
     }
 }
 
-@media screen and (width <= 414px) {
-    .shakeMe > * {
-        --fontSize: 2.25;
+@media screen and (width <= 550px) {
+    .winScreen {
+        width: 60%;
+    }
+
+    .title {
+        padding-top: 3%;
+        box-sizing: border-box;
+        flex-wrap: wrap;
+        line-height: 0.75;
+    }
+
+    .title * {
+        font-size: 3rem;
+        --animationStart: -400%;
+    }
+}
+
+@media screen and (width <= 1500px) {
+    .item:nth-child(1) {
+        --left: 18%;
+    }
+
+    .item:nth-child(2) {
+        --left: 50%;
+    }
+
+    .item:nth-child(3) {
+        --left: 82%;
     }
 }
